# actix-web-intro

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  config.yaml  sqlx-data.json
.github/workflows/: audit-daily.yml  audit-on-push-v2.yml  audit.yml  general.yml  rust-self-hosted.yml  rust.yml  scheduled-audit.yml
.sqlx/: query-038046c1b1ec736d3c4a436e455823fcc53ae5b820f88921d83f1a8e33172c4b.json  query-24a0bf8e5d66e340e355f17886074b283c56b42bb93a93e6f1e6a9a12935397f.json  query-2bf299eaad99859dc78d79f74ad7fd01f6476400864ea63f8188e0e1f87d9319.json  query-3722025f0d6b71a616c074f2a47a83a6e4e0cda389a838dbf3845b342403fcfc.json  query-3952a48f56dde02808dabb64acb5f201317e6b78b7b006aadda9407ffe72e106.json  query-3c19db5a5ea7d91f9b673dafcc9380e7579b747833e2fb2cb4c5892261035776.json  query-429f0897a3c43dca32af247947c1ddd6d6ddb3240e39400ebd68f60cc6f07bbd.json  query-51d5835225a5d93d54b6d4a6bb6478cc9b5f44a2b4ec569f1a58a37946abcc86.json  query-59e16564db72dd276fe2c6ad08c4deeec05331604757d78c8b995e957fa11366.json  query-78bfe8b967d22262f00dd630f4baed62d426484fa77a23dd6a2bc8715533bb06.json  query-8f40e648fbbd751ecfb76235a106e8e3eff02b42de7dc44adeae4684b1c251fc.json  query-a928ddb6c156b87395875b395b2ee193974f86254ca6576a264a83f45913cd22.json  query-af4168dadf1022f2443d5dde2f88d9ec795efdff3e9f5e907cdf13969ecda820.json  query-c3a24707f2e96a84b4f235f220e721798f216f2a5bbeb653049ca21f7df08170.json  query-d43b794947785d596d67faf66813fcf5bb58f9c9ffeb3055e7125a706c011333.json  query-e79cb2ab14345f3e4ad545de4b0f1c276d4adf655cfc57c655b018f8c228e3e7.json  query-f316d4e909b55c203c3a52d1504bf7a0fa10983908ab509a83b8ccb765d022c0.json  query-f68a392ecaa5fb8039361f8e8eb14920fc9d4e25f12f56f722105e20f98570d9.json
config/: base.yaml  local.yaml  prod.yaml
migrations/: 20221210234012_create_subscriptions_table.down.sql  20221210234012_create_subscriptions_table.up.sql  20230212214348_add_status_to_subscriptions.down.sql  20230212214348_add_status_to_subscriptions.up.sql  20230212215323_create_subscription_tokens_table.down.sql  20230212215323_create_subscription_tokens_table.up.sql  20240226221118_seed_user.down.sql  20240226221118_seed_user.up.sql  20240407144254_add_see_user.down.sql  20240407144254_add_see_user.up.sql  20240519105044_create_idempotency_table.down.sql  20240519105044_create_idempotency_table.up.sql  20240525130325_create_newsletter_issues_table.up.sql  20240525131832_create_issue_delivery_queue_table.up.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  config.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: index.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
src/utils/: errors.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs  utils.rs
