[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0", features = ["cookies"] }
actix-web-lab = "0.20"
config = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0"
tracing-actix-web = "0.7"
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1"
validator = "0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2"
serde_urlencoded = "0.7.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
fake = "2.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
claims = "0.7"
wiremock = "0"
serde_json = "1"
linkify = "0"